--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -26,6 +26,9 @@
         <action
             android:id="@+id/action_startFragment_to_tileSettingsFragment"
             app:destination="@id/tileSettingsFragment" />
+        <action
+            android:id="@+id/action_startFragment_to_runSequentialRoutine"
+            app:destination="@id/runSequentialRoutine" />
     </fragment>
 
     <fragment
